name:                atl
version:             0.1.0.0
synopsis:            The Arrow transformer library

description:         Arrow classes using functional dependencies, with instances
                     for various arrow transformers, inspired by the mtl
                     - /Monad Transformer Library/ - by Andy Gill:
                     <http://hackage.haskell.org/package/mtl>.

homepage:            http://github.com/felko/atl
bug-reports:         http://github.com/felko/atl/issues

license:             BSD3
license-file:        LICENSE
author:              M Farkas-Dyck, felko
maintainer:          strake888@gmail.com, baxbaxwalanuksiwe@gmail.com

category:            Control
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:              git
  location:          git://github.com/felko/atl.git

library
  exposed-modules:   Control.Arrow.State,  Control.Arrow.State.Class
                   , Control.Arrow.Except, Control.Arrow.Except.Class
                   , Control.Arrow.Writer, Control.Arrow.Writer.Class
                   , Control.Arrow.Reader, Control.Arrow.Reader.Class
                   , Control.Arrow.List,   Control.Arrow.List.Class
                   , Control.Arrow.Trans
                   , Util

  extensions:        Arrows
                     MultiParamTypeClasses
                     FunctionalDependencies
                     FlexibleInstances
                     FlexibleContexts
                     RankNTypes

  build-depends:     base ==4.6.*
